--- a/covid_web/static/css/styles.css
+++ b/covid_web/static/css/styles.css
@@ -1,20 +1,26 @@
 html {
   overflow: hidden;
   font-size: 15px;
-  background-color: #40687a;
+  color: #6abcf3;
+  background-color: #fdfdfd;
 }
 
-h1,
+h1 {
+  font-size: 3rem;
+  color: rgb(255, 255, 255);
+  text-transform: uppercase;
+}
+
 h2,
 h3,
 p,
 input,
 li {
-  color: #000000;
+  color: #6abcf3;
 }
 
 h1 {
-  font-size: 2rem;
+  font-size: 2.75rem;
   text-align: center;
   flex: 5;
   text-transform: uppercase;
@@ -41,8 +47,14 @@ main {
   text-align: center;
 }
 
-/* header bar */
+main a{
+  font-size: 1.25rem;
+  color: #b6b6b6;
+  text-decoration: none;
+}
+
 header {
+  background-color: rgb(243, 139, 144);
   margin-bottom: 10px;
   display: flex;
   flex-flow: row wrap;
@@ -54,25 +66,25 @@ nav,
 article,
 footer {
   margin: auto;
-  background-color: rgba(170, 220, 240, 0.5);
   padding: 1%;
 }
 
-label {
-  font-size: 1.5rem;
+main {
+  background-color: white;
 }
 
 input {
+  color: #505050;
   font-size: 1rem;
   line-height: 2;
 }
 
 input[type="submit"], button{
   font-size: 1rem;
-  background-color: #4caf50;
+  background-color: #5bd65f;
   border: none;
   color: white;
-  padding: 5px 32px;
+  padding: 5px 50px;
   text-decoration: none;
   margin: 4px 2px;
   cursor: pointer;
@@ -102,11 +114,11 @@ nav li {
 
 nav a,
 nav span {
+  color: #ffffff;
   display: inline-block;
   font-size: 1.5rem;
   text-transform: uppercase;
   text-decoration: none;
-  color: black;
 }
 
 nav a:hover{
@@ -114,9 +126,11 @@ nav a:hover{
 }
 
 footer {
+  background-color: rgb(243, 139, 144);
   margin-top: 5px;
 }
 
 footer p{
+  color: #ffffff;
   font-size: 1.25rem;
 }
