--- a/covid_web/static/css/styles.css
+++ b/covid_web/static/css/styles.css
@@ -121,8 +121,11 @@ nav span {
   text-decoration: none;
 }
 
+
 nav a:hover{
   font-weight: bold;
+  text-shadow:0px 0px 30px #ffffff;
+  transition: all 0.1s ease-in;
 }
 
 footer {
