Add CSS file and modified index page

--- a/covid_web/templates/index.html
+++ b/covid_web/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Covid19-Tracker</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+    <link rel="stylesheet" href="{% static 'covid_web/styles.css' %}" />
   </head>
 
   <body>
