connect register page with index page

--- a/covid_web/templates/index.html
+++ b/covid_web/templates/index.html
@@ -39,7 +39,7 @@
           <input type="submit" value="OK" />
         </form>
 
-        <p><a href="#">Don't have any account?</a></p>
+        <p><a href="register">Don't have any account?</a></p>
       </article>
     </main>
 
