Add data to home page

--- a/covid_web/templates/index.html
+++ b/covid_web/templates/index.html
@@ -22,10 +22,10 @@
         d = dt.getDate();
         document.getElementById("date").innerHTML = y + "-" + m + "-" + d;
         </script>
-        <div class="textbox"><img src="{% static 'images/infection1.png' %}"> Total Confirm Cases : {{totalconfirmcases}}</div>
-        <div class="textbox"><img src="{% static 'images/infection2.png' %}"> New Confirm Cases : {{newconfirmcases}}</div>
-        <div class="textbox"><img src="{% static 'images/infection3.png' %}"> New Deaths : {{newdeaths}}</div>
-        <div class="textbox"><img src="{% static 'images/infection4.png' %}"> Total Deaths : {{totalcases}}</div>
+        <div class="textbox"><img src="{% static 'images/infection1.png' %}"> Total Confirm Cases : {{totalconfirm}}</div>
+        <div class="textbox"><img src="{% static 'images/infection2.png' %}"> New Confirm Cases : {{newconfirm}}</div>
+        <div class="textbox"><img src="{% static 'images/infection3.png' %}"> New Deaths : {{totaldeaths}}</div>
+        <div class="textbox"><img src="{% static 'images/infection4.png' %}"> Total Deaths : {{newdeaths}}</div>
       </aside>
       <article>
           <h2>Welcome to Covid19-Tracker</h2>
