--- a/covid_web/templates/index.html
+++ b/covid_web/templates/index.html
@@ -10,40 +10,44 @@
   <body>
     <header>
       <h1>Covid19-Tracker</h1>
-      <nav>
-        <ul>
-          <li><span>Home</span></li>
-          <li><a href="#">Find Area</a></li>
-          <li><a href="#">More Info</a></li>
-        </ul>
-      </nav>
     </header>
 
     <main>
+      <aside>
+        <p>Date: <span id="date"></span></p>
+        <script>
+        dt =  new Date();
+        y = dt.getFullYear();
+        m = dt.getMonth() + 1;
+        d = dt.getDate();
+        document.getElementById("date").innerHTML = y + "-" + m + "-" + d;
+        </script>
+        <div class="textbox"><img src="{% static 'images/infection1.png' %}"> Total Confirm Cases : {{totalconfirm}}</div>
+        <div class="textbox"><img src="{% static 'images/infection2.png' %}"> New Confirm Cases : {{newconfirm}}</div>
+        <div class="textbox"><img src="{% static 'images/infection3.png' %}"> New Deaths : {{totaldeaths}}</div>
+        <div class="textbox"><img src="{% static 'images/infection4.png' %}"> Total Deaths : {{newdeaths}}</div>
+      </aside>
       <article>
-        <h2>Welcome to Covid19-Tracker</h2>
-
-        <form action="/detail/" method="post">
-          <label for="email">Email: </label><br>
-          <input
-            id="email"
-            type="email"
-            name="email_field"
-          /><br>
-          <label for="password">Password: </label><br>
-          <input
-            id="password"
-            type="password"
-            name="password_field"
-          /><br><br>
-          <input type="submit" value="OK" />
-        </form>
-
-        <p><a href="#">Don't have any account?</a></p>
+          <h2>Welcome to Covid19-Tracker</h2>
+          <form action="/detail/" method="post">
+            <label for="email">Email: </label><br>
+            <input
+              id="email"
+              type="email"
+              name="email_field"
+            /><br>
+            <label for="password">Password: </label><br>
+            <input
+              id="password"
+              type="password"
+              name="password_field"
+            /><br><br>
+            <input type="submit" value="OK" />
+          </form>
+          <p><a href="#">Don't have any account?</a></p>
       </article>
     </main>
-
-    <footer>
+  <footer>
       <p>This is Covid19-Tracker app used for ISP project proposal only.</p>
     </footer>
   </body>
