apply covid-data linked to index page

--- a/covid_web/templates/index.html
+++ b/covid_web/templates/index.html
@@ -24,8 +24,8 @@
         </script>
         <div class="textbox"><img src="{% static 'images/infection1.png' %}"> Total Confirm Cases : {{totalconfirm}}</div>
         <div class="textbox"><img src="{% static 'images/infection2.png' %}"> New Confirm Cases : {{newconfirm}}</div>
-        <div class="textbox"><img src="{% static 'images/infection3.png' %}"> New Deaths : {{totaldeaths}}</div>
-        <div class="textbox"><img src="{% static 'images/infection4.png' %}"> Total Deaths : {{newdeaths}}</div>
+        <div class="textbox"><img src="{% static 'images/infection3.png' %}"> New Deaths : {{newdeaths}}</div>
+        <div class="textbox"><img src="{% static 'images/infection4.png' %}"> Total Deaths : {{totaldeaths}}</div>
       </aside>
       <article>
           <h2>Welcome to Covid19-Tracker</h2>
