fix index page and add register function

--- a/covid_web/templates/index.html
+++ b/covid_web/templates/index.html
@@ -29,22 +29,19 @@
       </aside>
       <article>
           <h2>Welcome to Covid19-Tracker</h2>
-          <form action="/detail/" method="post">
-            <label for="email">Email: </label><br>
-            <input
-              id="email"
-              type="email"
-              name="email_field"
-            /><br>
-            <label for="password">Password: </label><br>
-            <input
-              id="password"
-              type="password"
-              name="password_field"
-            /><br><br>
-            <input type="submit" value="OK" />
-          </form>
-          <p><a href="#">Don't have any account?</a></p>
+           <button onclick="location.href='accounts/login';">
+      Log in
+           </button>
+
+
+          <p>Don't have any account?</p>
+           <button  onclick="location.href='signup/';">
+      Register
+           </button>
+
+
+
+
       </article>
     </main>
   <footer>
