add search bar to details.html

--- a/covid_web/templates/details.html
+++ b/covid_web/templates/details.html
@@ -4,15 +4,16 @@
     Country: {{name}}
     </h1>
     <form action="/country">
-        <select name="country" id="country">
-        {% if name == '' %} <option value='{{country}}'selected>Please select your country</option>{%endif%}
+    <a><strong>Please search your country: </strong></a>
+        <input list="browsers" name="country" id="country">
+        <datalist id="browsers">
             {% for country in country_name %}
                 {% if name == country %} <option value='{{country}}'selected>{{country}}</option>
                 {%else%} 
                     <option value='{{country}}'>{{country}}</option> 
                 {%endif%}
             {%endfor%}
-        </select>
+        </datalist>
         <button>submit</button>
     </form>
         <div class="textbox"> Total Confirm Cases : {{totalconfirm}}</div>
