--- a/covid_web/static/covid_web/styles.css
+++ b/covid_web/static/covid_web/styles.css
@@ -30,6 +30,7 @@ input {
 /* Style the submit button */
 input[type="submit"],
 button {
+  line-height: 2;
   font-size: 1rem;
   background-color: #5bd65f;
   border: none;
@@ -43,6 +44,11 @@ button {
 /* Style the submit button when hovered */
 input[type="submit"]:hover {
   font-weight: bold;
+}
+
+/* Style the datalist form */
+.browsers {
+  height: 2;
 }
 
 /* Style the title */
@@ -122,6 +128,7 @@ input[type="submit"]:hover {
   text-align: center;
 }
 
+/* Style the Django login error message */
 .centered .errorlist {
   color: red;
   font-size: 1rem;
@@ -132,14 +139,13 @@ input[type="submit"]:hover {
 .main {
   flex: 1;
   background-color: white;
-  padding: 20px;
+  padding: 35px;
 }
 
 /* Style the image */
 .img {
   background-color: #aaa;
-  width: 100%;
-  padding: 20px;
+  padding: 10px;
 }
 
 /* Footer */
