--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,3 +1,11 @@
+{% extends "base_template.html" %} 
+{% block title %}
+  <style>
+    .navbar {
+      display :none;
+    }
+  </style>
+{% endblock %}
 {% block content %}
 <h2>Register</h2>
 <form method="POST">
