add the line basic id onto the detail page

--- a/covid_web/templates/details.html
+++ b/covid_web/templates/details.html
@@ -10,6 +10,7 @@
     <h1 style="color:#5bd65f; -webkit-text-stroke: 1px grey;">Let's checkout our LineBot</h1>
     {% load static %}
     <img src="{% static 'images/linebot_qrcode.jpg' %}" style="width:300px;height:300px;">
+    <h3>Id: @943axxmg</h3>
     <h2>Type "help" in line bot for commands</h2>
   </div>
 </div>
