--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -50,6 +50,7 @@
       </p>
       <input type="hidden" name="next" value="{{next}}" />
     </form></br>
+    <a href="{% url 'social:begin' 'google-oauth2' %}">Login with Google</a>
     <a href="{% url 'password_reset' %}">Forgot password?</a>
   </div>
 </div>
