--- a/covid_web/templates/index.html
+++ b/covid_web/templates/index.html
@@ -49,11 +49,11 @@
         <button type="submit">Login</button>
       </p>
       <input type="hidden" name="next" value="{{next}}" />
-    </form></br>
-      <a href="{% url 'social:begin' 'google-oauth2' %}"><img src={% static 'images/google'%}></a><br><br>
-    </div>
+    </form>
+      <a href="{% url 'social:begin' 'google-oauth2' %}">
+      {% load static %}
+      <img src={% static 'images/google_login.png'%} style="width:200px;height:35px;" ></a><br><br>
     <a href="{% url 'password_reset' %}">Forgot password?</a>
   </div>
 </div>
 {% endblock %}
->>>>>>> d60c83d588c5ea71dddb9a6c908e872c20ae0b40
