--- a/covid_web/templates/index.html
+++ b/covid_web/templates/index.html
@@ -42,7 +42,6 @@
 <div class="right">
   <div class="centered">
     <h2>Welcome to Covid19-Tracker</h2>
-
     <form method="post">
       {% csrf_token %} {{ form.as_p }}
       <p>
@@ -53,7 +52,9 @@
       <a href="{% url 'social:begin' 'google-oauth2' %}">
       {% load static %}
       <img src={% static 'images/google_login.png' %} style="width:230px;height:38px;"></a><br><br>
-      <a href="{% url 'social:begin' 'github' %}">githubbbb<br>
+      <a href="{% url 'social:begin' 'github' %}">      {% load static %}
+      <img src={% static 'images/github_logo.png' %} style="width:240px;height:38px;"></a><br><br>
+      <br>
     <a href="{% url 'password_reset' %}">Forgot password?</a>
   </div>
 </div>
