--- a/covid_web/templates/index.html
+++ b/covid_web/templates/index.html
@@ -1,61 +1,103 @@
-{% extends "base_template.html" %} 
-{% block title %}<title>Home Page</title>{%endblock %} 
-{% block navbar %}
-    <div class="navbar">
-      <a href="signup/" class="right">Don't have any account?</a>
-    </div>
-{% endblock %}
+<!DOCTYPE html>
+<html>
 
-{% block content %}
-<div class="left">
-  <p>Date: <span id="date"></span></p>
-  <script>
-    dt = new Date();
-    y = dt.getFullYear();
-    m = dt.getMonth() + 1;
-    d = dt.getDate();
-    document.getElementById("date").innerHTML = y + "-" + m + "-" + d;
-  </script>
-  <div class="centered">
-    <div class="textbox">
-      {% load static %}
-      <img src="{% static 'images/infection1.png' %}" /> Total Confirm Cases :
-      {{totalconfirm}}
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  {% block title %}<title>Covid19-Tracker</title>{% endblock %}
+  {% load static %}
+  <link rel="stylesheet" href="{% static 'covid_web/bootstrap/css/bootstrap.css' %}" />
+  {% load static %}
+  <script src ={% static 'covid_web/bootstrap/js/bootstrap.js' %}></script>
+  {% comment %} {% load static %}
+  <link rel="stylesheet" href="{% static 'covid_web/styles.css' %}" /> {% endcomment %}
+
+  <style>
+    .centered {
+      color:white;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    
+  </style>
+
+</head>
+
+<body>
+  <div class="row">
+      <div class="col-sm">login</div>
+      <div class="col-sm">signup</div>
     </div>
-    <div class="textbox">
-      {% load static %}
-      <img src="{% static 'images/infection2.png' %}" /> New Confirm Cases :
-      {{newconfirm}}
-    </div>
-    <div class="textbox">
-      {% load static %}
-      <img src="{% static 'images/infection3.png' %}" /> New Deaths :
-      {{newdeaths}}
-    </div>
-    <div class="textbox">
-      {% load static %}
-      <img src="{% static 'images/infection4.png' %}" /> Total Deaths :
-      {{totaldeaths}}
-    </div>
+  <div class="container-fluid" style="background: #FAD4AF;">
+
+      <div id="slider" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#slider" data-slide-to="0" class="active"></li>
+          <li data-target="#slider" data-slide-to="1"></li>
+          <li data-target="#slider" data-slide-to="2"></li>
+        </ol>
+
+        <div class="carousel-inner">
+          <!-- First slide -->
+          <div class="carousel-item active text-center p-4">
+            {% load static %}
+            <img class="d-block w-100" src="{% static 'images/slide1.png' %}" alt="First slide">
+            <div class="centered">
+              <h1><b>Covid19-Tracker<b></h1>
+              <p>Date: <span id="date"></span></p>
+              <script>
+                dt = new Date();
+                y = dt.getFullYear();
+                m = dt.getMonth() + 1;
+                d = dt.getDate();
+                document.getElementById("date").innerHTML = y + "-" + m + "-" + d;
+              </script>
+            </div>
+          </div>
+          <!-- Second slide -->
+          <div class="carousel-item text-center p-4">
+            {% load static %}
+            <img class="d-block w-100" src="{% static 'images/slide2.png' %}" alt="Second slide">
+            {% comment %} <div class="centered" style="color:black;">
+              <h1><b>Today Data<b></h1>
+              <div class="row">
+                <div class="col-sm">
+                  <h4>Total Cases <div class="text-warning"><b>{{totalconfirm}}</b></div></h4>
+                </div>
+                <div class="col-sm">
+                  <h4>New Cases <div class="text-danger"><b>{{newconfirm}}</b></div></h4>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-sm">
+                  <h4>New Deaths <div class="text-dark"><b>{{newdeaths}}</b></div></h4>
+                </div>
+                <div class="col-sm">
+                  <h4>Total Deaths <div class="text-muted"><b>{{totaldeaths}}</b></div></h4>
+                </div>
+              </div>
+            </div> {% endcomment %}
+          </div>
+          <!-- Third slide -->
+          <div class="carousel-item text-center p-4">
+            {% load static %}
+            <img class="d-block w-100" src="{% static 'images/slide3.png' %}" alt="Third slide">
+          </div>
+        </div>
+
+
+        <a class="carousel-control-prev" href="#slider" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only"></span>
+        </a>
+        <a class="carousel-control-next" href="#slider" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only"></span>
+        </a>
+      </div>
   </div>
-</div>
-<div class="right">
-  <div class="centered">
-    <h2>Welcome to Covid19-Tracker</h2>
-    <form method="post">
-      {% csrf_token %} {{ form.as_p }}
-      <p>
-        <button type="submit">Login</button>
-      </p>
-      <input type="hidden" name="next" value="{{next}}" />
-    </form>
-      <a href="{% url 'social:begin' 'google-oauth2' %}">
-      {% load static %}
-      <img src={% static 'images/google_login.png' %} style="width:230px;height:38px;"></a><br><br>
-      <a href="{% url 'social:begin' 'github' %}">      {% load static %}
-      <img src={% static 'images/github_logo.png' %} style="width:230px;height:38px;"></a><br><br>
-      <br>
-    <a href="{% url 'password_reset' %}">Forgot password?</a>
-  </div>
-</div>
-{% endblock %}
+</body>
+</html>
