--- a/covid_web/templates/index.html
+++ b/covid_web/templates/index.html
@@ -9,10 +9,9 @@
   <link rel="stylesheet" href="{% static 'covid_web/bootstrap/css/bootstrap.css' %}" />
   {% load static %}
   <script src ={% static 'covid_web/bootstrap/js/bootstrap.js' %}></script>
-  {% comment %} {% load static %}
-  <link rel="stylesheet" href="{% static 'covid_web/styles.css' %}" /> {% endcomment %}
 
   <style>
+    {% comment %} make text centered in carousel {% endcomment %}
     .centered {
       color:white;
       position: absolute;
@@ -20,17 +19,12 @@
       left: 50%;
       transform: translate(-50%, -50%);
     }
-
     
   </style>
 
 </head>
 
 <body>
-  <div class="row">
-      <div class="col-sm">login</div>
-      <div class="col-sm">signup</div>
-    </div>
   <div class="container-fluid" style="background: #FAD4AF;">
 
       <div id="slider" class="carousel slide" data-ride="carousel">
@@ -46,8 +40,8 @@
             {% load static %}
             <img class="d-block w-100" src="{% static 'images/slide1.png' %}" alt="First slide">
             <div class="centered">
-              <h1><b>Covid19-Tracker<b></h1>
-              <p>Date: <span id="date"></span></p>
+              <h1 style="font-size:6vw;"><b>Covid19-Tracker</b></h1>
+              <p style="font-size:2vw;">Date: <span id="date"></span></p>
               <script>
                 dt = new Date();
                 y = dt.getFullYear();
@@ -61,25 +55,25 @@
           <div class="carousel-item text-center p-4">
             {% load static %}
             <img class="d-block w-100" src="{% static 'images/slide2.png' %}" alt="Second slide">
-            {% comment %} <div class="centered" style="color:black;">
-              <h1><b>Today Data<b></h1>
+            <div class="container-fluid centered" style="color:black;">
+              <h1 style="font-size:4vw;" ><b>Today Data</b></h1>
               <div class="row">
-                <div class="col-sm">
-                  <h4>Total Cases <div class="text-warning"><b>{{totalconfirm}}</b></div></h4>
+                <div class="col">
+                  <h4 style="font-size:3vw;">Total Cases <div class="text-danger"><b>{{totalconfirm}}</b></div></h4>
                 </div>
-                <div class="col-sm">
-                  <h4>New Cases <div class="text-danger"><b>{{newconfirm}}</b></div></h4>
+                <div class="col">
+                  <h4 style="font-size:3vw;">New Cases <div class="text-warning"><b>{{newconfirm}}</b></div></h4>
                 </div>
               </div>
               <div class="row">
-                <div class="col-sm">
-                  <h4>New Deaths <div class="text-dark"><b>{{newdeaths}}</b></div></h4>
+                <div class="col">
+                  <h4 style="font-size:3vw;">Total Deaths <div class="text-muted"><b>{{totaldeaths}}</b></div></h4>
                 </div>
-                <div class="col-sm">
-                  <h4>Total Deaths <div class="text-muted"><b>{{totaldeaths}}</b></div></h4>
+                <div class="col">
+                  <h4 style="font-size:3vw;">New Deaths <div class="text-dark"><b>{{newdeaths}}</b></div></h4>
                 </div>
               </div>
-            </div> {% endcomment %}
+            </div>
           </div>
           <!-- Third slide -->
           <div class="carousel-item text-center p-4">
@@ -87,7 +81,6 @@
             <img class="d-block w-100" src="{% static 'images/slide3.png' %}" alt="Third slide">
           </div>
         </div>
-
 
         <a class="carousel-control-prev" href="#slider" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -100,4 +93,99 @@
       </div>
   </div>
 </body>
+
+<nav class="navbar navbar-expand-md navbar-light bg-light" style="padding:1%">
+    <a class="navbar-brand" href="#">
+      {% load static %}
+      <img src="{% static 'images/infection2.png' %}" width="30" height="30" alt="">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Doc</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+            </li>
+        </ul>
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="signup/" >Register</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<div class="container-fluid">
+
+  <div class="row">
+
+    <div class="col-sm" style="padding:2%;">
+      <div class="overflow-auto">
+        </h2> </h2>
+        <p>Most common symptoms:
+          fever
+          dry cough
+          tiredness
+          Less common symptoms:
+          aches and pains
+          sore throat
+          diarrhoea
+          conjunctivitis
+          headache
+          loss of taste or smell
+          a rash on skin, or discolouration of fingers or toes
+          Serious symptoms:
+          difficulty breathing or shortness of breath
+          chest pain or pressure
+          loss of speech or movement
+        </p>
+      </div>
+    </div>
+
+    <div class="col-sm p-3">
+      <div class="container-md bg-light">
+      <h2><b>Welcome to Covid-19 Tracker</b></h2>
+        <form class="form-signin" action="" method="post">
+          {% csrf_token %}
+          <label for="form.id_username" class="sr-only pt-2">Username</label>
+          <input type="text" id="form.id_username" class="form-control" name="{{ form.username.html_name}}" placeholder="Username" required autofocus>
+          <label for="form.id_password" class="sr-only pt-2">Password</label>
+          <input type="password" id="form.id_password" class="form-control" placeholder="Password" required name="{{ form.password.html_name}}">
+          <div class="container p-3">
+            <button type="submit" class="btn btn-success">Login</button>
+            <a href="{% url 'password_reset' %}" class="float-right">Forgot password?</a>
+          </div>
+          {% if form.errors %}
+            {% for field in form %}
+              {% for error in field.errors %}
+                <div class="alert alert-danger">
+                  <strong>{{ error|escape }}</strong>
+                </div>
+              {% endfor %}
+            {% endfor %}
+            {% for error in form.non_field_errors %}
+              <div class="alert alert-danger">
+                  <strong>{{ error|escape }}</strong>
+              </div>
+            {% endfor %}
+          {% endif %}
+        </form>
+      
+        <a href="{% url 'social:begin' 'google-oauth2' %}">
+          {% load static %}
+          <img src={% static 'images/google_login.png' %} style="width:230px;height:38px;">
+        </a>
+        <a><b>or</b></a>
+        <a class="pt-2" href="{% url 'social:begin' 'github' %}">
+          {% load static %}
+          <img src={% static 'images/github_logo.png' %} style="width:230px;height:38px;">
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
 </html>
