Fix some miss arranged elements

--- a/covid_web/templates/index.html
+++ b/covid_web/templates/index.html
@@ -171,7 +171,7 @@ This is a massive contrast with the original Sars-coronavirus, back in 2002. It 
                 <button type="submit" class="btn btn-outline-success" style="width:230px;height:38px;"><b>Login</b></button>
               </div>
               <div class="col">
-                <a href="{% url 'password_reset' %}" class="float-right pt-3" style="text-decoration: none;">Forgot password?</a>
+                <a href="{% url 'password_reset' %}" class="btn btn-warning" style="width:230px;height:38px; text-decoration: none;">Forgot password?</a>
               </div>
             </div>
 
@@ -196,7 +196,7 @@ This is a massive contrast with the original Sars-coronavirus, back in 2002. It 
     </div>
   </div>
 
-  <footer class="page-footer font-small bg-light">
+   <footer class="page-footer font-small bg-light" style=" bottom: 0; width: 100%;">
     <div class="text-muted text-center py-3">
       This is Covid-19 Tracker application use for ISP project proposal only.
     </div>
