Add popup and fix some confict

--- a/covid_web/templates/base_template.html
+++ b/covid_web/templates/base_template.html
@@ -36,10 +36,26 @@
       <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav mr-auto">
               <li class="nav-item">
-                  <a class="nav-link" target="blank" href="#">Doc</a>
+                  <a class="nav-link" target="blank" href="https://github.com/lisbono2001/Covid19-Tracker/wiki">Doc</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" target="blank" href="#">About</a>
+                  <a class="nav-link" href="#" data-toggle="modal" data-target=".bd-example-modal-lg">About</a>
+                  <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                    <div class="modal-dialog modal-lg">
+                      <div class="modal-content">
+                        <div class="modal-body">
+                          <h5>About this project</h5>
+                          <p>Covid-19 Tracker is a part of KU ISP' projects</p>
+                          <hr>
+                          <h5>Team members</h5>
+                          <p>1. Bhatara Chamchan </p>
+                          <p>2. Puvana Swatvanith </p>
+                          <p>3. Suchon Prasert </p>
+                          <p>4. Theetouch Kasemarnontana </p>
+                      </div>
+                      </div>
+                    </div>
+                  </div>
               </li>
           </ul>
           <ul class="navbar-nav">
