Fix an anchor link

--- a/covid_web/templates/index.html
+++ b/covid_web/templates/index.html
@@ -82,7 +82,7 @@ But it takes at least a week before Covid progresses to the point where people n
 So the virus is like a dangerous driver fleeing the scene - the virus has moved on to the next victim long before we either recover or die.
 In stark terms, "the virus doesn't care" if you die, says Prof Lehner, "this is a hit and run virus".
 This is a massive contrast with the original Sars-coronavirus, back in 2002. It was most infectious days after people became ill, so they were easy to isolate.</p>
-      <p class="text-muted">Reference : <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&ved=2ahUKEwjopOeB4oHtAhUBlEsFHfLBDScQFjABegQIBhAC&url=https%3A%2F%2Fwww.bbc.com%2Fnews%2Fhealth-54648684&usg=AOvVaw2Jfl2XGNIoPHCbgWdwYE4G" style="text-decoration: none;">BBC</a> </p>
+      <p class="text-muted">Reference : <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&ved=2ahUKEwjopOeB4oHtAhUBlEsFHfLBDScQFjABegQIBhAC&url=https%3A%2F%2Fwww.bbc.com%2Fnews%2Fhealth-54648684&usg=AOvVaw2Jfl2XGNIoPHCbgWdwYE4G" target="blank" style="text-decoration: none;">BBC</a> </p>
     </div>
 
     <div class="col">
