Fix some text dur to Travis confict

--- a/covid_web/templates/details.html
+++ b/covid_web/templates/details.html
@@ -39,7 +39,7 @@
                     <h2><b>Welcome to Covid-19 Tracker</b></h2>
                     <div class="row pt-2">
                             <form action="/country">
-                                {% if name == '' %} <h3 style='color: red'> Let's find your Interesting area ! </h3> {%endif%}
+                                {% if name == '' %} <h3 style='color: red'> Let's find your Interesting area</h3> {%endif%}
                                 
                                 {% if error_warning %} <h3 style='color: red'> Can't find your country </h3> {%endif%}
                                 
