Add title to pages

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,5 +1,8 @@
 {% extends "base_template.html" %} 
 
+{% block title%}
+<title>Login</title>
+{% endblock %}
 {% block navbar %}
 <nav class="navbar navbar-expand-md navbar-light bg-light" style="padding:1%">
     <a class="navbar-brand" href="#">
