--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,6 +1,6 @@
 {% extends "base_template.html" %} 
 {% block title %}
-  Sign up
+  <title>Sign up</title>
   <style>
     .navbar {
       display :none;
