--- a/covid_web/templates/base_template.html
+++ b/covid_web/templates/base_template.html
@@ -5,10 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {% block title %}<title>Covid19-Tracker</title>{% endblock %}
-  {% load static %}
-  <link rel="stylesheet" href="{% static 'covid_web/bootstrap/css/bootstrap.css' %}" />
-  {% load static %}
-  <script src ={% static 'covid_web/bootstrap/js/bootstrap.js' %}></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-CuOF+2SnTUfTwSZjCXf01h7uYhfOBuxIhGKPbfEJ3+FqH/s6cIFN9bGr1HmAg4fQ" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-popRpmFF9JQgExhfw5tZT4I9/CI5e2QcuUZPOVXb1m7qUmeR2b50u+YFEYe1wgzy" crossorigin="anonymous"></script>
   <style>
     .centered {
       color:white;
