--- a/covid_web/templates/details.html
+++ b/covid_web/templates/details.html
@@ -30,8 +30,8 @@
     <div class="container-fluid p-4">
         <div class="row">
             <div class="col-sm p-3">
-                <h2>Covid Map</h2>
-                <p>Detail</p>
+                <h2>More Info</h2>
+                <a class="btn btn-info" href="{% url 'prevent' %}" style="color:white; width:100px">Info</a>
             </div>
 
             <div class="col">
@@ -79,10 +79,14 @@
                                 <p> Recovered : <span class="text-success"><strong>{{recovered}}</strong></span></p>
                                 <p> Today Recovered : <span class="text-success"><strong>{{todayRecovered}}</strong></span></p>
                                 <p> Active Cases : <span class="text-warning"><strong>{{active}}</strong></span></p>
+
+
+                                <div class="row pt-3">
+                                    
+                                </div>
                             </div>
                         </div>
                         <div class="col pt-2">
-
                         </div>
                     </div>
                 </div>
