--- a/covid_web/templates/details.html
+++ b/covid_web/templates/details.html
@@ -30,7 +30,28 @@
     <div class="container-fluid p-4">
         <div class="row">
             <div class="col-sm p-3">
-                <h2>More Info</h2>
+                <h2>Covid Map</h2>
+                <script async defer
+                    src="https://maps.googleapis.com/maps/api/js?=AIzaSyDr-eXifZSnrqd9SPpoG4qYj1Owg6X5eRE">
+                </script>
+                </head>
+                <body onload ='start()'>
+                    <div id='main' style='min-width: 200px;
+                    width: 100%;
+                    min-height: 200px;
+                    height: 90%;
+                    border: 1px solid blue; '>
+                    </div>
+                    <script>
+                        var first = null
+                        function start(){ 
+                            var main = document.getElementById('main')
+                            var data = { zoom: 6, center: {lat:14, lng:100}}
+                            first = new google.maps.Map(main, data)
+                            new google.maps.Marker({map: first, position:{lat:13.755824,lng:100.567428 }})
+                        }
+                    </script>
+                <br>
                 <a class="btn btn-info" href="{% url 'prevent' %}" style="color:white; width:100px">Info</a>
             </div>
 
@@ -82,7 +103,6 @@
 
 
                                 <div class="row pt-3">
-                                    
                                 </div>
                             </div>
                         </div>
