--- a/covid_web/templates/details.html
+++ b/covid_web/templates/details.html
@@ -2,6 +2,7 @@
 
 {% block title %}<title>Covid19 Tracker Country</title>{% endblock %}
 
+user: {{user_country}}
 
 {% block navbar %}
   <nav class="navbar navbar-expand-md navbar-light bg-light" style="padding:1%">
