--- a/covid_web/static/covid_web/styles.css
+++ b/covid_web/static/covid_web/styles.css
@@ -186,3 +186,15 @@ input[type="submit"]:hover {
   width:50px;
   height:50px; 
 }
+
+.vmap {
+  width: 28%;
+  margin: auto;
+}
+
+.vmap path {
+  fill: #6abcf3;
+  stroke: #5bd65f;
+  stroke-width: 3px;
+  transition: fill 0.3s;
+}
